Fix misused css units for spacing - fixes #3

--- a/src/components/features/Hero/Hero.module.scss
+++ b/src/components/features/Hero/Hero.module.scss
@@ -35,7 +35,7 @@
   }
 
   a {
-    margin-block: 2em;
+    margin-block: 32px;
   }
 }
 
