--- a/src/components/features/ShortenLinks/ShortenLinks.module.scss
+++ b/src/components/features/ShortenLinks/ShortenLinks.module.scss
@@ -28,7 +28,7 @@
 .input {
   @include mixins.btn-reset();
   border-radius: variables.$radius-small;
-  padding: 0.8em 1.5em;
+  padding: 12px 32px;
   width: 100%;
   font-size: 1.3rem;
   color: variables.$color-dark;
@@ -41,7 +41,7 @@
   }
 
   @include mixins.breakpoint(medium) {
-    padding: 0.6em 1em;
+    padding: 10px 16px;
     font-size: 1rem;
   }
 }
@@ -75,7 +75,7 @@
   @include mixins.btn-base();
   border-radius: variables.$radius-small;
   background-color: variables.$color-accent;
-  padding: 0.8em 2em;
+  padding: 16px 32px;
   white-space: nowrap;
   font-size: 1.3rem;
   font-weight: variables.$font-weight-bold;
@@ -96,7 +96,7 @@
   }
 
   @include mixins.breakpoint(medium) {
-    padding: 0.6em 1em;
+    padding: 10px 16px;
     font-size: 1.1rem;
   }
 }
